# snow-data-aggregator

./: README.md  main.py  pyproject.toml
snow_data_aggregator/website/: data_fetcher_interface.py  scraper_client_interface.py
snow_data_aggregator/website/data_fetchers/: crystal_data_fetcher.py
snow_data_aggregator/website/scraper_clients/: crystal_scraper_client.py
tests/website/data_fetchers/: test_crystal_data_fetcher.py
tests/website/scraper_clients/: test_crystal_scraper_client.py
