[tool.poetry]
name = "snow-data-aggregator"
version = "0.1.0"
description = ""
authors = ["ytakedai <yutotakedai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
